--- a/CSE472 Machine Learning Sessional/Assignment 3/ANN/nbproject/project.properties
+++ b/CSE472 Machine Learning Sessional/Assignment 3/ANN/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ann.LoadData
+main.class=ann.Network
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
